--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flot/0.8.3/jquery.flot.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flot/0.8.3/jquery.flot.time.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flot.tooltip/0.8.3/jquery.flot.tooltip.js"></script>
-<script src="js/rrd4j.js"></script>
+<script src="js/rrd4j-js.js"></script>
 </head>
 <body>
 	<div class="rrdgraph" style="width:800px;height:100px" data-src="data/missing.rrd" data-ds="sun" data-cf="AVERAGE" data-start="1272668400000" data-end="1277938800000">
